--- a/bab1/bab1.tex
+++ b/bab1/bab1.tex
@@ -28,13 +28,21 @@ Batasan masalah yang terdapat pada Tugas Akhir ini adalah sebagai berikut :
 \item Implementasi program menggunakan bahasa pemrograman Java untuk Android serta \textit{backend} dan Python untuk mendeteksi daun. 
 \item Implementasi aplikasi android untuk mengirim gambar daun ke server dan menampilkan balasan berupa jenis daun.
 \item Android yang digunakan minimal API 21 atau Lollipop versi 5.0
-\item Sistem pengenalan daun dirancang untuk deteksi satu daun dalam satu gambar. 
+\item Sistem pengenalan daun dirancang untuk mendeteksi satu jenis daun dalam satu gambar. 
 \item Dataset diperoleh dari https://archive.ics.uci.edu/ml/datasets/leaf yang ditambahkan dengan dataset dari penulis sendiri. 
+\item Dalam pengambilan gambar, jarak daun dari kamera sekitar 30 cm - 80 cm agar gambar daun terlihat jelas.
+
 \end {enumerate}
 
 \section {Tujuan}
 
-Tujuan pembuatan Tugas Akhir ini adalah merancang aplikasi pendeteksi daun online berbasis perangkat bergerak android. 
+Tujuan pembuatan Tugas Akhir ini adalah :
+\begin {enumerate}
+\item Mengimplementasikan transfer learning untuk mengklasifikasi jenis daun
+\item Mengembangkan aplikasi berbasis Android untuk mengklasifikasi jenis daun
+\item Melakukan proses klasifikasi daun pada \textit{server}
+\item Menentukan arsitektur \textit{transfer learning} mana yang lebih akurat untuk mengklasifikasi jenis daun
+\end{enumerate}
 
 \section{Manfaat}
 Dengan adanya Tugas Akhir ini, diharapkan dapat memberikan manfaat kepada pengguna perangkat bergerak berbasis android sebagai aplikasi mobile yang memberikan informasi mengenai jenis daun. 
