--- a/bab6/bab6.tex
+++ b/bab6/bab6.tex
@@ -7,8 +7,8 @@ Dalam pengerjaan Tugas Akhir ini setelah melalui tahap perancangan aplikasi, imp
 \begin{enumerate}
 	\item Untuk mengimplementasi \textit{transfer learning} untuk mendeteksi daun digunakan library Keras dan pengimplementasian ekstraksi fitur menggunakan model yang tersedia.
 	\item Untuk mengembangkan aplikasi pendeteksi daun berbasis Android yang mengirim gambar ke server dan menerima balasan berupa jenis daun diterapkan REST API untuk memanggil server yang kemudian akan mengirim balasan ke Android. Untuk memanggil server digunakan Retrofit2.
-	\item Untuk melakukan proses klasifikasi daun pada server, digunakan model yang telah disimpan untuk mengklasifikasi jenis daun.
-	\item Arsitektur yang paling akurat dalam mendeteksi daun menggunakan Logistic Regression adalah MobileNet, dengan akurasi 96%.
+	\item Untuk melakukan proses klasifikasi daun pada server, digunakan model yang telah disimpan. Model dibuat dengan menggunakan \textit{transfer knowledge} dari model-model yang sudah disediakan Keras.
+	\item Arsitektur yang paling akurat dalam mendeteksi daun menggunakan Logistic Regression adalah MobileNet, dengan akurasi 96\%.
 \end{enumerate}
 
 \section{Saran}
