--- a/bib/source.bib
+++ b/bib/source.bib
@@ -76,15 +76,52 @@
 	url = {https://keras.io/}
 }
 
+@online{imagenet_def,
+		author = {Rosebrock, Adrian},
+		title = {ImageNet: VGGNet, ResNet, Inception, and Xception with Keras},
+		urldate = {2019-07-15},
+		url = {https://www.pyimagesearch.com/2017/03/20/imagenet-vggnet-resnet-inception-xception-keras/}
+}
+
+@online{konvolusi,
+		author = {Richard, Dharmadi},
+		title = {Mengenal Convolutional Layer Dan Pooling Layer},
+		urldate = {2019-07-15},
+		date = {2018-04-04},
+		url = {Mengenal Convolutional Layer Dan Pooling Layer}
+	}
 @online{vgg16_def,
 	author = {Chollet, Francois},
 	title = {How convolutional neural networks see the world},
 	subtitle = {An exploration of convnet filters with Keras},
-	urldate = {2019-07-14},
+	urldate = {2019-06-14},
 	date = {2016-01-30},
 	url = {https://blog.keras.io/how-convolutional-neural-networks-see-the-world.html}
 }
+@online{max_pool,
+	author = {Shofia, Nadhifa},
+	title= {CONVOLUTIONAL NEURAL NETWORK},
+	date = {2018-07-06},
+	url = {https://medium.com/@nadhifasofia/1-convolutional-neural-network-convolutional-neural-network-merupakan-salah-satu-metode-machine-28189e17335b}
+}
 
+@article{resnet,
+		author = {He, Kaiming and Xiangyu, Zhang and Ren, Shaoqing and Sun, Jian},
+		title = {Deep Residual Learning for Image Recognition},
+		date = {2015-10-12},
+}
+
+@article{inception,
+		author = {Szegedy, Christian and Liu, Wei and Sermanett, Pierre},
+		title = {Going Deeper with Convolutions},
+		date = {2014-10-17}
+}
+
+@article{xception,
+		 author = {Chollet, Francais},
+		 title = {Xception: Deep Learning with Depthwise Separable Convolutions},
+		 date = {2016-10-07}
+}
 @online{vgg19_def,
 	author = {{MathWorks}},
 	title = {vgg19},
@@ -95,7 +132,7 @@
 @online{figure_vgg,
 	author = {Davi Frossard},
 	title = {Model and pre-trained parameters for VGG16 in TensorFlow},
-	urldate = {2019-07-14},
+	urldate = {2019-07-14},url
 	date = {2016-07-17},
 	url = {https://www.cs.toronto.edu/~frossard/post/vgg16/}
 }
